auth blueprint and refactor url_prefix
